--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,6 @@
+0.7.1 (05-05-2015)
+- updated to use new libplatform-dev
+
 0.7.0 (04-30-2015)
 - updated to PVR API version 1.9.6
 - isengard related changes
