--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,7 +1,10 @@
+0.9.1 (07-04-2015)
+- updated to PVR API version 2.0.0
+
 0.9.0 (07-03-2015)
 - updated to PVR API version 1.9.7
 
-0.8.1 (28-06-2015)
+0.8.1 (06-28-2015)
 - updated language files from Transifex
 
 0.8.0 (05-24-2015)
