--- a/pvr.stalker/resources/language/resource.language.en_gb/strings.po
+++ b/pvr.stalker/resources/language/resource.language.en_gb/strings.po
@@ -31,7 +31,7 @@ msgid "Misc"
 msgstr ""
 
 msgctxt "#30003"
-msgid "Connection Timeout"
+msgid "Connection Timeout (seconds)"
 msgstr ""
 
 #empty strings from id 30004 to 30100
