--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+0.9.2 (17-07-2015)
+- Debian packaging: fix library install path
+- Miscellaneous backend fixes
+
 0.9.1 (07-04-2015)
 - updated to PVR API version 2.0.0
 
