--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,5 +1,9 @@
+1.0.2 (28-12-2015)
+- kodi.guilib is mandatory, enforce it
+
 1.0.1 (08-12-2015)
 - updated language files from Transifex
+
 1.0.0 (05-12-2015)
 - Added support for caching EPG data
 - Added support for 'matrix' CMDs/URLs
