--- a/pvr.stalker/resources/language/resource.language.zh_tw/strings.po
+++ b/pvr.stalker/resources/language/resource.language.zh_tw/strings.po
@@ -20,9 +20,37 @@ msgctxt "#30000"
 msgid "General"
 msgstr "一般設定"
 
+msgctxt "#30001"
+msgid "Active Portal"
+msgstr "使用中的門戶網站"
+
+msgctxt "#30002"
+msgid "Misc"
+msgstr "雜項"
+
+msgctxt "#30003"
+msgid "Connection Timeout (seconds)"
+msgstr "連接過時 (秒鐘)"
+
+msgctxt "#30101"
+msgid "MAC Address"
+msgstr "MAC 機碼"
+
 msgctxt "#30102"
 msgid "Server Address"
 msgstr "伺服器地址"
+
+msgctxt "#30103"
+msgid "Time Zone"
+msgstr "時區"
+
+msgctxt "#30103"
+msgid "Time Zone"
+msgstr "時區"
+
+msgctxt "#30104"
+msgid "Auth Credentials"
+msgstr "認證資料"
 
 msgctxt "#30105"
 msgid "Login"
@@ -36,6 +64,130 @@ msgctxt "#30107"
 msgid "Guide"
 msgstr "節目表"
 
+msgctxt "#30108"
+msgid "Preference"
+msgstr "喜好選擇"
+
+msgctxt "#30109"
+msgid "Prefer Provider"
+msgstr "喜好的服務提供者"
+
+msgctxt "#30110"
+msgid "Prefer XMLTV"
+msgstr "喜好的 XMLTV"
+
+msgctxt "#30111"
+msgid "Provider Only"
+msgstr "指定的服務提供者"
+
+msgctxt "#30112"
+msgid "XMLTV Only"
+msgstr "指定的 XMLTV"
+
+msgctxt "#30113"
+msgid "Cache Guide Data"
+msgstr "節目表快取化"
+
+msgctxt "#30114"
+msgid "Cache Time (hours)"
+msgstr "快取時間 (小時)"
+
+msgctxt "#30115"
+msgid "XMLTV"
+msgstr "XMLTV"
+
+msgctxt "#30116"
+msgid "Scope"
+msgstr "範圍"
+
+msgctxt "#30117"
+msgid "Remote URL"
+msgstr "遠端儲存網址"
+
+msgctxt "#30118"
+msgid "Local Path"
+msgstr "本地儲存途徑"
+
 msgctxt "#30119"
 msgid "Advanced"
 msgstr "進階"
+
+msgctxt "#30120"
+msgid "Token"
+msgstr "代碼"
+
+msgctxt "#30121"
+msgid "Serial Number"
+msgstr "序列號"
+
+msgctxt "#30122"
+msgid "Device ID"
+msgstr "裝置 ID"
+
+msgctxt "#30123"
+msgid "Device ID2"
+msgstr "裝置 ID2"
+
+msgctxt "#30124"
+msgid "Signature"
+msgstr "簽章"
+
+msgctxt "#30501"
+msgid "Unknown error. See log for details."
+msgstr "不明的錯誤。詳情見日誌記錄。"
+
+msgctxt "#30502"
+msgid "Startup failed."
+msgstr "啟動失敗。"
+
+msgctxt "#30503"
+msgid "Failed to connect to server."
+msgstr "無法連線至伺服器。"
+
+msgctxt "#30504"
+msgid "Authentication failed. Retrying."
+msgstr "認證失敗。正重試中 ..."
+
+msgctxt "#30505"
+msgid "Unable to load channels."
+msgstr "無法載入頻道。"
+
+msgctxt "#30506"
+msgid "Unable to load channel groups."
+msgstr "無法載入頻道組合。"
+
+msgctxt "#30507"
+msgid "Unable to load guide."
+msgstr "無法載入節目表。"
+
+msgctxt "#30508"
+msgid "Failed to get stream URL."
+msgstr "無法取得串流網址。"
+
+msgctxt "#30509"
+msgid "Authorization lost. Re-authenticating."
+msgstr "已遺失認證。正重新提取中 ..."
+
+msgctxt "#30510"
+msgid "Re-authenticated."
+msgstr "已重新取得認證。"
+
+msgctxt "#31000"
+msgid "Portal 1"
+msgstr "門戶網站 1"
+
+msgctxt "#32000"
+msgid "Portal 2"
+msgstr "門戶網站 2"
+
+msgctxt "#33000"
+msgid "Portal 3"
+msgstr "門戶網站 3"
+
+msgctxt "#34000"
+msgid "Portal 4"
+msgstr "門戶網站 4"
+
+msgctxt "#35000"
+msgid "Portal 5"
+msgstr "門戶網站 5"
