--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,5 +1,9 @@
+2.6.0 (04-07-2016)
+- added per portal token caching
+
 2.5.1 (18-06-2016)
 - updated language files from Transifex
+
 2.5.0 (20-05-2016)
 - [XMLTV] replaced tinyxml with libxml2
 
