--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,6 @@
+3.0.2
+- Removed old no more needed version functions
+
 3.0.1
 - set dependency versions automatic during build
 - removed never used kodi to addon functions
