--- a/pvr.stalker/resources/language/resource.language.uz_uz/strings.po
+++ b/pvr.stalker/resources/language/resource.language.uz_uz/strings.po
@@ -9,17 +9,13 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: Tajik (Tajikistan) (http://www.transifex.com/projects/p/kodi-main/language/tg_TJ/)\n"
+"Language-Team: Uzbek (Uzbekistan) (http://www.transifex.com/projects/p/kodi-main/language/uz_UZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tg_TJ\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: uz_UZ\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "#30000"
 msgid "General"
-msgstr "Умумӣ"
-
-msgctxt "#30119"
-msgid "Advanced"
-msgstr "Иловагӣ"
+msgstr "Umumiy"
