--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,6 @@
+v4.1.3
+- Update PVR API 6.2.0
+
 4.1.2
 - Updated language files from Transifex
 - Replace AppVeyor with Azure for test build (better performance)
