--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,7 @@
+v4.1.4
+- Update with some minor cleanups
+- Add license name, forum url and source url to addon.xml
+
 v4.1.3
 - Update PVR API 6.2.0
 
