--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,9 @@
+v4.1.6:
+- Update PVR API 6.4.0
+- Correct license name on addon.xml
+- Change source license to use SPDX
+- Minor cleanups
+
 v4.1.5
 - Update PVR API 6.3.0
 
