--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,8 @@
+v6.0.0
+- PVR API 7.0.0
+- Rework addon to support new API interface
+- Code cleanup
+
 v5.0.0:
 - Update PVR API 6.5.1
 - Update Global API 1.2.0
