--- a/pvr.stalker/changelog.txt
+++ b/pvr.stalker/changelog.txt
@@ -1,3 +1,6 @@
+v6.0.1
+- Use kodi StringUtils and remove p8-platform dependency
+
 v6.0.0
 - PVR API 7.0.0
 - Rework addon to support new API interface
