--- a/pvr.stalker/resources/language/resource.language.bg_bg/strings.po
+++ b/pvr.stalker/resources/language/resource.language.bg_bg/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Клиент за ПВР за свързване на Kodi със „Stalker Middleware“"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Клиент за ПВР за свързване на Kodi със „Stalker Middleware“"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Тази програма е нестабилна! Авторите не носят отговорност за неуспешно записване, некоректни броячи, пропиляно време и други нежелани ефекти."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Основни"
