--- a/pvr.stalker/resources/language/resource.language.el_gr/strings.po
+++ b/pvr.stalker/resources/language/resource.language.el_gr/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "ΠελάτηςPVR για σύνδεση του Kodi με τοStalker Middleware"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Πελάτης PVR για σύνδεση του Kodi με το Stalker Middleware"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Ασταθές πρόγραμμα! Οι δημιουργοί δεν είναι σε καμία περίπτωση υπεύθυνοι για αποτυχημένες εγγραφές, λανθασμένους χρονοδιακόπτες, χαμένες ώρες, ή κάθε είδους ανεπιθύμητα αποτελέσματα."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Γενικά"
