--- a/pvr.stalker/resources/language/resource.language.fr_fr/strings.po
+++ b/pvr.stalker/resources/language/resource.language.fr_fr/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Client enregistreur vidéo (PVR) pour connecter Kodi à l'intergiciel Stalker"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Client enregistreur vidéo (PVR) pour connecter Kodi à l'intergiciel Stalker"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Logiciel en cours d'élaboration ! Les auteurs ne sont en aucun cas responsables de l'échec des enregistrements, programmations défectueuses, temps perdu ou autres effets indésirables."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Général"
