--- a/pvr.stalker/resources/language/resource.language.id_id/strings.po
+++ b/pvr.stalker/resources/language/resource.language.id_id/strings.po
@@ -17,6 +17,18 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 4.7\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR Client untuk menghubungkan Kodi ke Stalker Middleware "
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR Client untuk menghubungkan Kodi ke Stalker Middleware "
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Ini merupakan software yang tidak stabil! Penulis tidak bertanggung jawab untuk rekaman gagal, timer salah, waktu terbuang, atau efek tak diinginkan lainnya."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Umum"
