--- a/pvr.stalker/resources/language/resource.language.ko_kr/strings.po
+++ b/pvr.stalker/resources/language/resource.language.ko_kr/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Kodi를 Stalker 미들웨어로 연결하는 PVR 클라이언트"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Kodi를 Stalker 미들웨어로 연결하는 PVR 클라이언트"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "이 소프트웨어는 불안정합니다! 제작자는 녹화 실패, 부정확한 타이머, 시간 낭비 및 기타 예상하지 못한 결과에 대해 책임지지 않습니다."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "일반"
