--- a/pvr.stalker/resources/language/resource.language.lv_lv/strings.po
+++ b/pvr.stalker/resources/language/resource.language.lv_lv/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : 2);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR klients, lai pieslēgtu Kodi pie Stalker Middleware"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR klients, lai pieslēgtu Kodi pie Stalker Middleware"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Šī ir nestabila programmatūra! Autori nav atbildīgi par nesanākušiem ierakstiem, nepareiziem taimeriem, iztērētām stundām vai jebkādiem citiem nevēlamiem efektiem."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Vispārīgi"
