--- a/pvr.stalker/resources/language/resource.language.nb_no/strings.po
+++ b/pvr.stalker/resources/language/resource.language.nb_no/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR-klient for å koble Kodi til Stalker Mellomvare"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "PVR Klient for å koble Kodi til Stalker-mellomvare"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "Dette er ustabil programvare! Skaperen har ikke på noen måte ansvar for feilede opptak, uriktige tidsur, bortkastede timer, eller andre uønskede effekter."
+
 msgctxt "#30000"
 msgid "General"
 msgstr "Generelt"
