--- a/pvr.stalker/resources/language/resource.language.zh_cn/strings.po
+++ b/pvr.stalker/resources/language/resource.language.zh_cn/strings.po
@@ -16,6 +16,18 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+msgctxt "Addon Summary"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Kodi 连接 Stalker Middleware 的 PVR 客户端"
+
+msgctxt "Addon Description"
+msgid "PVR Client to connect Kodi to Stalker Middleware"
+msgstr "Kodi 连接 Stalker Middleware 的 PVR 客户端"
+
+msgctxt "Addon Disclaimer"
+msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
+msgstr "这是不稳定版的软件！作者不对录像失败、错误定时造成时间浪费或其它不良影响负责。"
+
 msgctxt "#30000"
 msgid "General"
 msgstr "常规"
