Copy translations from Nexus to Omega (except source language en_gb)

--- a/pvr.stalker/resources/language/resource.language.it_it/strings.po
+++ b/pvr.stalker/resources/language/resource.language.it_it/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Italian (Italy) (http://www.transifex.com/projects/p/kodi-main/language/it_IT/)\n"
-"Language: it_IT\n"
+"PO-Revision-Date: 2023-05-03 09:16+0000\n"
+"Last-Translator: Massimo Pissarello <mapi68@gmail.com>\n"
+"Language-Team: Italian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-stalker/it_it/>\n"
+"Language: it_it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.15.2\n"
 
 msgctxt "Addon Summary"
 msgid "PVR Client to connect Kodi to Stalker Middleware"
@@ -26,7 +27,7 @@ msgstr "Client PVR per connettere Kodi a Stalker Middleware"
 
 msgctxt "Addon Disclaimer"
 msgid "This is unstable software! The authors are in no way responsible for failed recordings, incorrect timers, wasted hours, or any other undesirable effects."
-msgstr "Questo software è instabile! Gli autori non sono in alcun modo responsabile per le fallite registrazioni, timer non corretti, ore perse o qualsiasi altro effetto non desiderato."
+msgstr "Questo è un software instabile! Gli autori non sono in alcun modo responsabili per registrazioni fallite, timer errati, ore sprecate o qualsiasi altro effetto indesiderato."
 
 msgctxt "#30000"
 msgid "General"
@@ -58,11 +59,11 @@ msgstr "Fuso orario"
 
 msgctxt "#30104"
 msgid "Auth Credentials"
-msgstr "Credenziali accesso"
+msgstr "Credenziali autenticazione"
 
 msgctxt "#30105"
 msgid "Login"
-msgstr "Login"
+msgstr "Accedi"
 
 msgctxt "#30106"
 msgid "Password"
@@ -74,11 +75,11 @@ msgstr "Guida"
 
 msgctxt "#30108"
 msgid "Preference"
-msgstr "Preferenza"
+msgstr "Preferenze"
 
 msgctxt "#30109"
 msgid "Prefer Provider"
-msgstr "Preferisci provider"
+msgstr "Preferisci fornitore"
 
 msgctxt "#30110"
 msgid "Prefer XMLTV"
@@ -86,7 +87,7 @@ msgstr "Preferisci XMLTV"
 
 msgctxt "#30111"
 msgid "Provider Only"
-msgstr "Solo provider"
+msgstr "Solo fornitore"
 
 msgctxt "#30112"
 msgid "XMLTV Only"
@@ -94,11 +95,11 @@ msgstr "Solo XMLTV"
 
 msgctxt "#30113"
 msgid "Cache Guide Data"
-msgstr "Cache dei dati delle guida"
+msgstr "Cache dati delle guida"
 
 msgctxt "#30114"
 msgid "Cache Time (hours)"
-msgstr "Tempo della cache (ore)"
+msgstr "Durata cache (ore)"
 
 msgctxt "#30115"
 msgid "XMLTV"
@@ -118,11 +119,11 @@ msgstr "Percorso locale"
 
 msgctxt "#30119"
 msgid "Advanced"
-msgstr "Avanzato"
+msgstr "Avanzate"
 
 msgctxt "#30120"
 msgid "Token"
-msgstr "Permesso"
+msgstr "Token"
 
 msgctxt "#30121"
 msgid "Serial Number"
@@ -142,19 +143,19 @@ msgstr "Firma"
 
 msgctxt "#30501"
 msgid "Unknown error. See log for details."
-msgstr "Errore sconosciuto. Vedi i log per i dettagli."
+msgstr "Errore sconosciuto. Vedi il registro per i dettagli."
 
 msgctxt "#30502"
 msgid "Startup failed."
-msgstr "Avvio fallito."
+msgstr "Avvio non riuscito."
 
 msgctxt "#30503"
 msgid "Failed to connect to server."
-msgstr "Connessione al server fallita."
+msgstr "Impossibile connettersi al server."
 
 msgctxt "#30504"
 msgid "Authentication failed. Retrying."
-msgstr "Autenticazione fallita. Riprovando."
+msgstr "Autenticazione fallita. Nuovo tentativo."
 
 msgctxt "#30505"
 msgid "Unable to load channels."
@@ -170,7 +171,7 @@ msgstr "Impossibile caricare la guida."
 
 msgctxt "#30508"
 msgid "Failed to get stream URL."
-msgstr "Ottenimento dell'URL dello stream fallito."
+msgstr "Impossibile ottenere l'URL dello stream."
 
 msgctxt "#30509"
 msgid "Authorization lost. Re-authenticating."
